# mp2-backend

./: .env  Cargo.toml  Dockerfile  compose.yaml  devenv.nix  devenv.yaml
.sqlx/: query-23263592e4174414571d6bf86989b5a135504f934ddab0f8048b4335747a671b.json  query-43f78fa5c77e7b26a7c25f545425d5605a7997cebf5af1620f98b73a76d8910e.json  query-9f1f65ad6a2e6dda5049ae4212b11ec2d41d313f397fdda141212a681ca0494e.json  query-a1d01ca7a99a9c020ee075fe469a5cacdecf16f079b3932b2f57e64703094db9.json  query-a7bb9850a482dc839db3425c4bd0f687dc4edbdebe2878489bd6b6d0fcc2ff41.json  query-b3c6578a3300b91fcf61cdfce7500dc1522bb7504fae748169b3253a6a8b78d3.json  query-bca1e80b65583d979d551ed7891a2aa3cb5d07e322230bed3f3a956e30cd2622.json  query-e7dbd3422cb306dd9a949bcce9a27c6a4ec7a8256956438581515d4a6ce05411.json  query-ebbbfee2cf4f09c0249b73dfe6e3bc576a559ec1ab612056c71431f36a61ff81.json  query-fef657df08b60f67110e0ae3625e1c837a994236a0e577bc23364a52e83b2882.json
migrations/: 20260102210424_users.sql  20260106145712_passkey_users.sql  20260106165016_passkey_user_credentials.sql
queries/: create-user.sql  get-user-by-mail.sql  get-user-credentials.sql
queries/passkey/: create-user-credentials.sql  create-user.sql  get-user-by-id.sql  get-user-by-mail.sql  get-user-credential-ids-by-user-id.sql  get-user-credential.sql  get-user-credentials.sql
src/: config.rs  crypto.rs  error.rs  main.rs  repository.rs  service.rs
testing/: compose.yaml
