[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
config = "0.15.19"
dotenv = "0.15.0"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.29"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6",  features = [ "postgres", "runtime-tokio", "uuid"]}
tokio = "1.48.0"
webauthn-rs = { version = "0.5.4", features= [ "conditional-ui" ]}
